@@ -665,6 +665,7 @@ test_player_ft2_envelope_invalid_ins
 test_player_ft2_envelope_reset
 test_player_ft2_instrument_fade_update
 test_player_ft2_invalid_ins_defaults
+test_player_ft2_invalid_porta_target
 test_player_ft2_k00_defaults
 test_player_ft2_k00_is_note_off
 test_player_ft2_kxx
